# mahjong-app

./: local.properties
app/src/main/java/com/tencent/yolov8ncnn/: MainActivity.java
app/src/main/jni/: CMakeLists.txt  yolov8.h  yolov8_det.cpp  yolov8ncnn.cpp
app/src/main/res/layout/: main.xml
